--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,13 @@
 <!-- /container -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <?!= HtmlService.createHtmlOutputFromFile('css').getContent(); ?>
 <script type="text/javascript">    
-    var jq1102 = jQuery.noConflict(true);
+    var script = document.createElement('script');
+    script.src = 'https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js';
+    document.body.appendChild(script);
 </script>
 <?!= HtmlService.createHtmlOutputFromFile('feedback.jq1102.min.js').getContent(); ?>
 <script type="text/javascript">
+    var jq1102 = jQuery.noConflict(true);
     jq1102(function () {
         jq1102.feedback({
             ajaxURL: "<?!= ScriptApp.getService().getUrl(); ?>",
