--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,12 @@
     script.src = 'https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js';
     document.body.appendChild(script);
 </script>
+<script type="text/javascript">    
+    var jq1102 = jQuery.noConflict(true);
+</script>
 <?!= HtmlService.createHtmlOutputFromFile('feedback.jq1102.min.js').getContent(); ?>
 <script type="text/javascript">
-    var jq1102 = jQuery.noConflict(true);
+    
     jq1102(function () {
         jq1102.feedback({
             ajaxURL: "<?!= ScriptApp.getService().getUrl(); ?>",
