--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,6 @@
         });
     });
 </script>
-<button type="button" id="feedback-btn" class="feedback-btn feedback-btn-info vertical-right-aligned">
+<button type="button" id="feedback-btn" class="btn btn-info vertical-right-aligned">
     Feedback
 </button>
