--- a/src/css.html
+++ b/src/css.html
@@ -52,7 +52,7 @@
     top: 50%;
     z-index: 100;
 }
-.feedback-btn {
+.btn {
     display: inline-block;
     padding: 6px 12px;
     margin-bottom: 0;
@@ -71,7 +71,7 @@
     -o-user-select: none;
     user-select: none;
 }
-.feedback-btn-info {
+.btn-info {
     color: #fff;
     background-color: #5bc0de;
     border-color: #46b8da;
